Got a buildable solution.

--- a/ModularWebApi.Plugin.Module1/ModularWebApi.Plugin.Module1.csproj
+++ b/ModularWebApi.Plugin.Module1/ModularWebApi.Plugin.Module1.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ModularWebApi.Core\ModularWebApi.Core.csproj" />
+  </ItemGroup>
+
 </Project>
