--- a/YourApp.Infrastructure/YourApp.Infrastructure.csproj
+++ b/YourApp.Infrastructure/YourApp.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ModularWebApi.Core\ModularWebApi.Core.csproj" />
+  </ItemGroup>
+
 </Project>
