--- a/ModularWebApi.Plugin.Module2/ModularWebApi.Plugin.Module2.csproj
+++ b/ModularWebApi.Plugin.Module2/ModularWebApi.Plugin.Module2.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <PropertyGroup>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <OutDir>$(SolutionDir)PluginSource</OutDir>
+  </PropertyGroup>
 </Project>
